# opengl-playground

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  conanfile.txt  wasm.profile  wasm.recipe.py
doc/: README.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/imgui/: imgui_impl_opengl3.cpp
res/shaders/advanced/instanced-rendering/: instanced-rendering.frag  instanced-rendering.vert
res/shaders/basics/basic-triangle/: basic-triangle.frag  basic-triangle.vert
res/shaders/basics/model-loading/: model-loading.frag  model-loading.vert
res/shaders/basics/rotating-cube/: rotating-cube.frag  rotating-cube.vert
res/shaders/basics/textured-primitives/: textured-primitives.frag  textured-primitives.vert
res/shaders/blinn-phong-shading/directional-light/: directional-light.frag
src/: app.cpp  app.h  main.cpp
src/components/graphics/: mesh.h  pipeline.h
src/components/physics/: transform.h
src/core/: context.h
src/examples/: i-example.h
src/examples/advanced/instanced-rendering/: instanced-rendering.cpp  instanced-rendering.h
src/examples/basics/basic-triangle/: basic-triangle.cpp  basic-triangle.h
src/examples/basics/model-loading/: model-loading.cpp  model-loading.h
src/examples/basics/rotating-cube/: rotating-cube.cpp  rotating-cube.h
src/examples/basics/textured-primitives/: textured-primitives.cpp  textured-primitives.h
src/examples/blinn-phong-shading/directional-light/: directional-light.cpp  directional-light.h
src/factories/components/: mesh-primitive-factory.cpp  mesh-primitive-factory.h
src/factories/entities/: model-factory.cpp  model-factory.h
src/graphics/: constant-buffer.h  gl-exception.cpp  gl-exception.h  render-command.cpp  render-command.h  vertex-input-description.h
src/scomponents/graphics/: camera.h  constant-buffers.h  materials.h  pipelines.h  shaders.h
src/scomponents/io/: inputs.h
src/systems/: camera-system.cpp  camera-system.h  i-system.h  render-system.cpp  render-system.h
www/: index.html  opengl-playground.data  opengl-playground.js  opengl-playground.wasm  opengl-playground.wasm.map
